Bug 96996 - PIVOTTABLE Drill to details first level doesn't work
Summary: PIVOTTABLE Drill to details first level doesn't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.0.1 rc
Hardware: All Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:5.2.0 target:5.1.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-01-10 02:50 UTC by Robert Gonzalez MX
Modified: 2016-10-25 19:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Calc test file (20.11 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-01-10 02:52 UTC, Robert Gonzalez MX
Details
screenshoots and descriptions (373.55 KB, application/vnd.oasis.opendocument.text)
2016-01-10 02:53 UTC, Robert Gonzalez MX
Details
Screenshoot LO 51 rc2 (110.80 KB, image/png)
2016-01-19 21:47 UTC, Robert Gonzalez MX
Details
Screenshoot LODev51 13.01.16 (113.10 KB, image/png)
2016-01-19 21:47 UTC, Robert Gonzalez MX
Details
Screenshoot LO RC2 Win 10 (96.05 KB, image/png)
2016-01-19 21:48 UTC, Robert Gonzalez MX
Details
Screenshoot LO 52 Win 10 (95.45 KB, image/png)
2016-01-19 21:49 UTC, Robert Gonzalez MX
Details
Screenshoot of Pivot table drill to detail (103.88 KB, image/png)
2016-01-27 03:26 UTC, Robert Gonzalez MX
Details
ScreenShoot RC3 WXP (47.33 KB, image/png)
2016-01-30 18:13 UTC, Robert Gonzalez MX
Details
ScreenShoot RC3 Windows 10 (95.79 KB, image/png)
2016-01-30 18:14 UTC, Robert Gonzalez MX
Details
Test with LO 5.1 release (74.37 KB, image/png)
2016-02-12 21:43 UTC, Robert Gonzalez MX
Details
Calc Screenshoot (86.27 KB, image/png)
2016-03-08 22:05 UTC, Robert Gonzalez MX
Details
Screen shoot LO Dev 5.2 (77.08 KB, image/png)
2016-04-09 13:54 UTC, Robert Gonzalez MX
Details
New test file pivot table (16.30 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-04-09 13:55 UTC, Robert Gonzalez MX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Gonzalez MX 2016-01-10 02:50:25 UTC
2015 11 30 Pivot Table Drill to details doesn’t work

First tested with Version: 5.1.0.0.beta1-buildfix1
Build ID: 13010a13177025f633c9b85adcb3edf6920e44e3
Threads 2; Ver: Windows 5.1; Render: default; 
Locale: es-MX (es_MX) on Windows SP SP3 and Windows 10


Problem description:
In a pivot table with the option “Enable drill to details” activated, and previously configured detail, double clicking in the first row category will pop up a window to select a field, instead of expand the detail. Also, when the detail is present, double clicking in the first row category will not hide the detail, but opens a dialog to select fields, as if it wants to expand. The same happens when double clicking in the first category column.

Double clicking in the second row or column field will perform as expected, expanding or contracting the details.

Steps to reproduce:
Open test file 2015 11 30 Drill Test 3.ods
Go to Pivot Table_Sheet5_1
Double click in any of the first row categories (field6)
The “Show Detail” window displays
Cancel the dialog
Double click in any of the second row categories (field1)
The details expands or contracts as expected.

In the same way
Double click in any of the first column categories (field4)
The “Show Detail” window displays
Cancel the dialog
Double click in any of the second column categories (field7), especially in the “09” value, because is more evident.
The details expands or contracts as expected.

The drill to details was already defined, and is present in the Pivot Table layout, and in the Show Detail window, the second row field is not listed.

Last tested with Version: 5.1.0.1.0+ 
Build ID: 2c6e8e4142493dd135003aff16a1709d6e3a29d0
CPU Threads: 2; OS Version: Windows 5.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-1, Time: 2016-01-06_12:56:07
Locale: es-MX (es_MX) on Windows XP SP3 and Windows 10
Comment 1 Robert Gonzalez MX 2016-01-10 02:52:26 UTC
Created attachment 121826 [details]
Calc test file
Comment 2 Robert Gonzalez MX 2016-01-10 02:53:00 UTC
Created attachment 121827 [details]
screenshoots and descriptions
Comment 3 Robert Gonzalez MX 2016-01-16 02:21:01 UTC
Hello:


Just tested it on 2016 01 15 with RC2 Version: 5.1.0.2
Build ID: ecd3574d51754b043f865cf5bafee286d24db7cc
CPU Threads: 2; OS Version: Windows 5.1; UI Render: default; 
Locale: es-MX (es_MX) 
Windows XP SP3 and Windows 10
Reproducible
Comment 4 Buovjaga 2016-01-18 18:38:06 UTC
I don't get the Show Detail window.

Maybe try renaming profile just to be sure https://wiki.documentfoundation.org/UserProfile#Resolving_corruption_in_the_user_profile

Win 7 Pro 64-bit
Version: 5.1.0.2 (x64)
Build ID: ecd3574d51754b043f865cf5bafee286d24db7cc
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI)

Version: 5.2.0.0.alpha0+
Build ID: 000df1832b54ba8f48c7f1c4c1cd92b70f6402da
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-18_01:08:28
Locale: fi-FI (fi_FI)
Comment 5 Robert Gonzalez MX 2016-01-19 21:46:15 UTC
(In reply to Beluga from comment #4)
> I don't get the Show Detail window.
> 
> Maybe try renaming profile just to be sure
> https://wiki.documentfoundation.org/
> UserProfile#Resolving_corruption_in_the_user_profile
> 


Hello.

I have renamed the profiles, both in the administrative RC2 installations and the Dev of 5.1 installation in a PC with Window XP SP3 and my Laptop with Windows 10

and the problem is still present.

The RC2 is 
Version: 5.1.0.2
Build ID: ecd3574d51754b043f865cf5bafee286d24db7cc
CPU Threads: 8; OS Version: Windows 6.2; UI Render: GL; 
Locale: es-MX (es_MX)

The Dev was 5.1.0.1.2016-01-12-11.37.42.


After that, installed the 

Version: 5.2.0.0.alpha0+
Build ID: 000df1832b54ba8f48c7f1c4c1cd92b70f6402da
CPU Threads: 8; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-18_01:08:28
Locale: es-MX (es_MX)

And found the same problem.

I am attaching screenshoots of each test.

Notice the highligthed field with yellow, where the double click is applied to expand/colapse details.
Comment 6 Robert Gonzalez MX 2016-01-19 21:47:14 UTC
Created attachment 122094 [details]
Screenshoot LO 51 rc2
Comment 7 Robert Gonzalez MX 2016-01-19 21:47:59 UTC
Created attachment 122095 [details]
Screenshoot LODev51 13.01.16
Comment 8 Robert Gonzalez MX 2016-01-19 21:48:35 UTC
Created attachment 122096 [details]
Screenshoot LO RC2 Win 10
Comment 9 Robert Gonzalez MX 2016-01-19 21:49:15 UTC
Created attachment 122097 [details]
Screenshoot LO 52 Win 10
Comment 10 Robert Gonzalez MX 2016-01-27 03:25:01 UTC
Hi.

I have tested this issue with Version: 5.1.1.0.0+
Build ID: 64b23ff688fc4ba3fc0205094380f072fd98b5b5
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-1, Time: 2016-01-25_07:41:39
Locale: es-MX (es_MX)

On Windows XP SP3 and Windows 10

With the test file provided as with some personal and work files that use pivot tables.

I am attaching a screenshoot of this.
Comment 11 Robert Gonzalez MX 2016-01-27 03:26:11 UTC
Created attachment 122232 [details]
Screenshoot of Pivot table drill to detail
Comment 12 Robert Gonzalez MX 2016-01-30 18:12:54 UTC
Hello.

I have tested again with the RC3

Reseted the profiles in both Windows XP SP3 and Windows 10

With the same problem.

I am attaching the screenshoots
Comment 13 Robert Gonzalez MX 2016-01-30 18:13:49 UTC
Created attachment 122288 [details]
ScreenShoot RC3 WXP
Comment 14 Robert Gonzalez MX 2016-01-30 18:14:27 UTC
Created attachment 122289 [details]
ScreenShoot RC3 Windows 10
Comment 15 Robert Gonzalez MX 2016-02-12 21:43:19 UTC
Created attachment 122598 [details]
Test with LO 5.1 release
Comment 16 Robert Gonzalez MX 2016-02-12 21:47:19 UTC
Hello.

I have tested the drill to detail in the test file with LO 5.1 just released these week, and the problem is still present.

I have some other files with pivot tables that behave in the same way in home and work.
Comment 17 Robert Gonzalez MX 2016-03-08 22:05:00 UTC
Created attachment 123412 [details]
Calc Screenshoot
Comment 18 Robert Gonzalez MX 2016-03-08 22:08:50 UTC
Hi.

Tested this problem with the Pivot table.

Version: 5.1.1.3
Build ID: 89f508ef3ecebd2cfb8e1def0f0ba9a803b88a6d
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
Locale: es-MX (es_MX)
On windows 10 and XP SP3
Comment 19 Robert Gonzalez MX 2016-04-09 13:53:37 UTC
Hi.

I suppose that this bug submission is waiting for some one else to confirm what I have found. Nonetheless I will keep updating it.

I have been testing this issue, forced by the use my pivot tables.

In version 5.0.5, drill to details, expand or collapse the details in the first row field level, as in version 4.4.7.

But in 5.1.2 last released, it will not, double clicking in the first row field, will bring a window to select fields to display details, but the layout is already configured.

I’m attaching a new test file and a screen shoot, that I hope will help to see what I have found.
Comment 20 Robert Gonzalez MX 2016-04-09 13:54:50 UTC
Created attachment 124200 [details]
Screen shoot LO Dev 5.2
Comment 21 Robert Gonzalez MX 2016-04-09 13:55:42 UTC
Created attachment 124201 [details]
New test file pivot table
Comment 22 raal 2016-04-11 12:41:45 UTC
This seems to have begun at the below commit.
Adding Cc: to Michael Stahl; Could you possibly take a look at this one? Thanks
 e40e3a5bd939731ecfc63f9fb2c2f17720a618f5 is the first bad commit
commit e40e3a5bd939731ecfc63f9fb2c2f17720a618f5
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Nov 7 06:19:47 2015 -0800

    source 37856f59d2351951b95cf5eb3a5e4f0c011a8762

    source 37856f59d2351951b95cf5eb3a5e4f0c011a8762


author	Michael Stahl <mstahl@redhat.com>	2015-11-06 16:03:25 (GMT)
committer	Michael Stahl <mstahl@redhat.com>	2015-11-06 19:37:39 (GMT)
commit 37856f59d2351951b95cf5eb3a5e4f0c011a8762 (patch)
tree 55777665cff7b7145c5b54cf7503aab5db33ca34
parent ce6401c263b9f098c1fad636656749db6c6f22a1 (diff)
sc: replace boost::ptr_vector with std::vector<std::unique_ptr>
Comment 23 Michael Stahl 2016-04-13 14:57:36 UTC
oops, accidentally changed one of those loops that was previously going in reverse but now goes forward...

fixed on master
Comment 24 Commit Notification 2016-04-13 14:59:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=470f16acc2a798f0ae1ebe9ce2080084ab167e80

tdf#96996 sc: fix the data pilot

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Commit Notification 2016-04-18 21:10:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dba0cc1edc6d778805ca8ed4b77800f1e9a95408&h=libreoffice-5-1

tdf#96996 sc: fix the data pilot

It will be available in 5.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 elicoten 2016-05-29 23:07:50 UTC
I found this bug after encountering some strange behaviour with Pivot Tables on LibreOffice 5.1.2.2 on Ubuntu. I can't tell if what I experienced matches up 100% to the problem described on this bug report but after I updated to LibreOffice 5.1.3.2 and the pivot table definitely worked better.