tdf#96996 sc: fix the data pilot

ScDPSaveData::GetInnermostDimension() should iterate in reverse (that
fixes the reported bug), and ScDataPilotFieldObj::setOrientation()
loop needs an early exit.

(regression from 37856f59d2351951b95cf5eb3a5e4f0c011a8762)

Change-Id: I7e0309385f3444bfd3ad21268cce4d25e60d7b05